added physics TI so desktop is complete

--- a/src/static/converters.css
+++ b/src/static/converters.css
@@ -100,7 +100,10 @@
 }
 
 .ti-instructions {
-  margin: 4rem;
+  margin-top: 1rem;
+  margin-bottom: 0rem;
+  margin-left: 4rem;
+  margin-right: 4rem;
 }
 
 .ti-instructions h4 {
