--- a/src/templates/TIgeometry.html
+++ b/src/templates/TIgeometry.html
@@ -6,31 +6,30 @@
 		</h1>
 
 		<div class="card-grid">
-			<a target="_blank" href="../static/tizip/DISTANCE.zip" download="../static/tizip/DISTANCE.zip">
+			<a target="_blank" href="../static/tizip/DISTANCE.zip" download="/DISTANCE.zip">
 				<div class="card">
 					<h3 class="card-header">Distance Formula for Finding Distance Between Two Points</h3>
 					<p>DISTANCE</p>
 					<img class="card-image" src="../static/Images/car.svg" alt="car">
-                        <p class="card-desc">This programs is used for finding the distance between two points on a standard coordinate plane given the x,y coordinates of the known points. </p>
-                    </div>
-                </a>
-                <a target="_blank" href="../static/tizip/MIDPT.zip" download="../static/tizip/MIDPT.zip">
-                    <div class="card">
-                        <h3 class="card-header">Midpoint Formula for Finding the Midpoint Between Two Points</h3>
-                        <p>MIDPT</p>
-                        <img class="card-image" src="../static/Images/destinations.svg" alt="destinations">
-                
-                        <p class="card-desc">This programs is used for finding the midpoint between two points (point that is equidistant from the 2 points) on a standard coordinate plane given the x,y coordinates of the known points. </p>
-                    </div>
-                </a>
-                <a target="_blank" href="../static/tizip/QDRACTIC.zip" download="../static/tizip/QDRATIC.zip">
-                    <div class="card">
-                        <h3 class="card-header">Quadractic Formula for Finding the Zeroes of a Quadractic Binomial</h3>
-                        <p>QDRACTIC</p>
-                        <img class="card-image" src="../static/Images/curve.svg" alt="curve graph">
-                        <p class="card-desc">This programs is used for finding the zeroes of a quadractic graph on a standard coordinate plane given the quadractic expression. </p>
-                    </div>
-                </a>
+          <p class="card-desc">This program is used for finding the distance between two points on a standard coordinate plane given the x,y coordinates of the known points. </p>
+            </div>
+        </a>
+      <a target="_blank" href="../static/tizip/MIDPT.zip" download="MIDPT.zip">
+        <div class="card">
+          <h3 class="card-header">Midpoint Formula for Finding the Midpoint Between Two Points</h3>
+          <p>MIDPT</p>
+          <img class="card-image" src="../static/Images/destinations.svg" alt="destinations">    
+          <p class="card-desc">This program is used for finding the midpoint between two points (point that is equidistant from the 2 points) on a standard coordinate plane given the x,y coordinates of the known points. </p>
+            </div>
+        </a>
+      <a target="_blank" href="../static/tizip/QDRACTIC.zip" download="../static/tizip/QDRATIC.zip">
+          <div class="card">
+            <h3 class="card-header">Quadractic Formula for Finding the Zeroes of a Quadractic Binomial</h3>
+            <p>QDRACTIC</p>
+            <img class="card-image" src="../static/Images/curve.svg" alt="curve graph">
+            <p class="card-desc">This program is used for finding the zeroes of a quadractic graph on a standard coordinate plane given the quadractic expression. </p>
+              </div>
+          </a>
             </div>
         </div>
     </section>
