--- a/src/static/physics.css
+++ b/src/static/physics.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@700&display=swap');
 
 
-.geometry-section {
+.physics-section {
     background-color: #1E202D;
     height: auto;
     width: 100%;
