--- a/src/templates/TIconverters.html
+++ b/src/templates/TIconverters.html
@@ -13,15 +13,15 @@
                         <h3 class="card-header">Convert Rotations Per Minute to Radians Per Second</h3>
                         <p>RPMCONRPS</p>
                         <img class="card-image" src="../static/Images/wheels.svg" alt="wheels">
-                        <p class="card-desc">This programs is used for finding the radians per second of a wheel or disc when given the rotations per minute.</p>
+                        <p class="card-desc">This program is used for finding the radians per second of a wheel or disc when given the rotations per minute.</p>
                     </div>
                 </a>
                 <a target="_blank" href="../static/tizip/AUCON.zip" download="AUCON.zip"
                     <div class="card">
                         <h3 class="card-header">Convert an Orbital Meter Radius to an Astronomical Unit Radius</h3>
                         <p>AUCON</p>
-                        <img class="card-image" src="../static/Images/orbit.svg" alt="orbit">
-                        <p class="card-desc">This programs is used for finding the orbital radius of an object in Astronomical Units (distance between Earth and Sun) when given the orbital radius in meters.</p>
+                        <img class="card-image" src="../static/Images/sun.svg" alt="sun">
+                        <p class="card-desc">This program is used for finding the orbital radius of an object in Astronomical Units (distance between Earth and Sun) when given the orbital radius in meters.</p>
                     </div>
                 </a>
             </div>
