Privacy policy + ti (#16)
* Added privacy policy. Added instructions for TI downloading as well as files for Converters. Recopied merge #15 routes.py to prevent new conflicts (sorry I forgot to pull)

* added privacy and ti

* added physics TI so desktop is complete

Co-authored-by: Claire <50155045+clairehsedu@users.noreply.github.com>

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -61,6 +61,7 @@
             <a href={{ url_for("resources") }}>Coding Resources</a>
             <a href={{ url_for("opportunities") }}>Opportunities</a>
             <a href={{ url_for("about") }}>About</a>
+            <a href={{url_for("legal") }}>Legal</a>
             <a href={{ url_for("join") }}>Join Club</a>
             <a href={{ url_for("legal") }}>Terms and Conditions</a>
         </div>
