--- a/src/static/converters.css
+++ b/src/static/converters.css
@@ -100,12 +100,16 @@
 }
 
 .ti-instructions {
-  margin: 4rem;
+  margin-top: 1rem;
+  margin-bottom: 0rem;
+  margin-left: 4rem;
+  margin-right: 4rem;
 }
 
 .ti-instructions h4 {
   font-size:1.5rem;
   margin-bottom: 1rem;
+  text-align: center;
 }
 .ti-instructions p {
   font-size: 1rem;
@@ -113,9 +117,20 @@
 
 .ti-instructions li {
   font-size: 1.2rem;
+  position: center;
+  text-align: center;
+  align-content: center;
+  align-items: center;
+  align-self: center;
 }
 
-ol.c {list-style-type: decimal;}
+ul {
+  list-style: none;
+  flex-wrap: wrap;
+  padding: 0;
+  justify-content: center;
+  text-align: center;
+}
 
 @media (max-width:1500px) {
     .content-wrapper {
