--- a/src/templates/TIconverters.html
+++ b/src/templates/TIconverters.html
@@ -1,55 +1,88 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <section class="converters-section">
-        <div class="content-wrapper">
-            <h1>
-                <div class="gradient-text">Converters</div>
-            </h1>
-    
-            <div class="card-grid">
-                <a target="_blank" href="../static/tizip/RPMCONRPS.zip" download="RPMCONRPS.zip">
-                    <div class="card">
-                        <h3 class="card-header">Convert Rotations Per Minute to Radians Per Second</h3>
-                        <p>RPMCONRPS</p>
-                        <img class="card-image" src="../static/Images/wheels.svg" alt="wheels">
-                        <p class="card-desc">This program is used for finding the radians per second of a wheel or disc when given the rotations per minute.</p>
-                    </div>
-                </a>
-                <a target="_blank" href="../static/tizip/AUCON.zip" download="AUCON.zip"
-                    <div class="card">
-                        <h3 class="card-header">Convert an Orbital Meter Radius to an Astronomical Unit Radius</h3>
-                        <p>AUCON</p>
-                        <img class="card-image" src="../static/Images/sun.svg" alt="sun">
-                        <p class="card-desc">This program is used for finding the orbital radius of an object in Astronomical Units (distance between Earth and Sun) when given the orbital radius in meters.</p>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </section>
-    <img src="../static/Images/page-wave-1.svg" alt="Page Wave Down" class="page-wave-down">
+	<section class="converters-section">
+		<div class="content-wrapper">
+			<h1>
+				<div class="gradient-text">Converters</div>
+			</h1>
 
-    <section class="ti-instructions-section">
-        <div class="content-wrapper">
-          <div class="ti-instructions">
-          <h4>There are 3 ways to use the program: <br><br>
-            <ul><li>Using the TI Connect CE Software</li><p>Download the Software at <a target="_blank" href="https://education.ti.com/en/products/computer-software/ti-connect-ce-sw">TI Connect CE Software.</a> Locate a <a target="_blank" href="https://education.ti.com/en/products/accessories/connectivity-kit">TI link cable</a> or standard USB Mini Type A to USB Type Mini B. Then follow the step by step instructions after unzipping the file. <br><br><iframe width="560" height="315" src="https://www.youtube.com/embed/iS-28EwTxqs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br></p>
-            <li>Using the TI Connect Software</li><p>Download the Software at <a target="_blank" href="https://education.ti.com/en/products/computer-software/ti-connect-sw">TI Connect Software.</a> Obtain a <a target="_blank" href="https://education.ti.com/en/products/accessories/connectivity-kit">TI link cable</a> or standard USB Mini Type A to USB Type Mini B. Then follow the step by step instructions after unzipping the file. For <a target="_blank" href="../static/tizip/TIConnectMAC-SendFiles.pdf" download="../static/tizip/TIConnectMAC-SendFiles.pdf">Macintosh</a> or <a target="_blank" href="../static/tizip/TIConnectPC-SendFiles.pdf" download="../static/tizip/TIConnectPC-SendFiles.pdf">PC</a><br><br></p>
-            <li>Manually Programming Your Calculator</li><p>You can manually program the files with basic key knowledge found <a target="_blank" href="../static/tizip/TIProgrammingGuide.pdf" download="..static/tizip/TIProgrammingGuide.pdf">here.</a> You will still need to download the TI Connect or Connect CE Software to view the files.</p>
-            </ul>
-        </h4>
-          </div>
-        </div>
-        
-</section>
-  <img class="page-wave-up" src="../static/Images/page-wave-2.svg" alt="Page Wave Up">
-<section class="converters-section">
-  <div class="content-wrapper">
-<div class="ti-disclaimer"><p>These programs are meant to aid in problem solving, rather than replace the concepts. Therefore, when you use these programs, you are agreeing to the honor code that you will not cheat. In addition, PVCS Club is NOT RESPONSIBLE if the honor code is broken.
-<br> Disclaimer: We are not affiliated, associated, authorized, endorsed by, or in any way officially connected with Texas Instruments, or any of its subsidiaries or its affiliates. The official Texas Instruments website can be found at <a target="_blank" href="https://www.ti.com">https://www.ti.com</a>.
-The names of TI Connect and Texas Instruments as well as related names, marks, emblems and images are registered trademarks of their respective owners. By using these programs, you acknowledge that this tool is freely presented for use by the general public, but NO waranties or guarantees are provided about the correctness, accuracy, or stability of the tool, or about its fitness for any purpose. Data may be lost without warning.
-</p></div></div>
-</section>
-<img src="../static/Images/page-wave-1.svg" alt="Page Wave Down" class="page-wave-down">
+			<div class="card-grid">
+				<a target="_blank" href="../static/tizip/RPMCONRPS.zip" download="RPMCONRPS.zip">
+					<div class="card">
+						<h3 class="card-header">Convert Rotations Per Minute to Radians Per Second</h3>
+						<p>RPMCONRPS</p>
+						<img class="card-image" src="../static/Images/wheels.svg" alt="wheels">
+						<p class="card-desc">This program is used for finding the radians per second of a wheel or disc when
+							given the
+							rotations per minute.</p>
+					</div>
+				</a>
+				<a target="_blank" href="../static/tizip/AUCON.zip" download="AUCON.zip">
+					<div class="card">
+						<h3 class="card-header">Convert an Orbital Meter Radius to an Astronomical Unit Radius</h3>
+						<p>AUCON</p>
+						<img class="card-image" src="../static/Images/sun.svg" alt="sun">
+						<p class="card-desc">This program is used for finding the orbital radius of an object in Astronomical
+							Units
+							(distance between Earth and Sun) when given the orbital radius in meters.</p>
+					</div>
+				</a>
+			</div>
+		</div>
+	</section>
+	
+	<img src="../static/Images/page-wave-1.svg" alt="Page Wave Down" class="page-wave-down">
+
+	<section class="ti-instructions">
+		<h1>There are 3 ways to use the program:</h1>
+		<h3>Using the TI Connect CE Software</h3>
+		<p>Download the Software at 
+			<a target="_blank" href="https://education.ti.com/en/products/computer-software/ti-connect-ce-sw">TI Connect CE Software.</a>
+			Locate a <a target="_blank" href="https://education.ti.com/en/products/accessories/connectivity-kit">TI link cable</a>
+			or standard USB Mini Type A to USB Type Mini B. Then follow the step by step instructions after
+			unzipping the file. 
+		</p>
+		<iframe 
+			src="https://www.youtube.com/embed/iS-28EwTxqs" 
+			title="YouTube video player" 
+			frameborder="0"
+			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+			allowfullscreen>
+		</iframe>
+		<h3>Using the TI Connect Software</h3>
+		<p>Download the Software at 
+			<a target="_blank" href="https://education.ti.com/en/products/computer-software/ti-connect-sw"> TI Connect Software.
+			</a> Obtain a <a target="_blank" href="https://education.ti.com/en/products/accessories/connectivity-kit">TI link cable</a>
+			or standard USB Mini Type A to USB Type Mini B. Then follow the step by step instructions after
+			unzipping the file. For <a target="_blank" href="../static/tizip/TIConnectMAC-SendFiles.pdf" download="../static/tizip/TIConnectMAC-SendFiles.pdf">Macintosh</a> or 
+			<a target="_blank" href="../static/tizip/TIConnectPC-SendFiles.pdf" download="../static/tizip/TIConnectPC-SendFiles.pdf">PC</a>
+		</p>
+		<h3>Manually Programming Your Calculator</h3>
+		<p>You can manually program the files with basic key knowledge found 
+			<a target="_blank" href="../static/tizip/TIProgrammingGuide.pdf" download="..static/tizip/TIProgrammingGuide.pdf">here.</a> You will still need to download the TI Connect or Connect CE Software to view the files.
+		</p>
+	</section>
+
+	<img class="page-wave-up" src="../static/Images/page-wave-2.svg" alt="Page Wave Up">
+
+	<section class="ti-disclaimer">
+		<h1>Disclaimer:</h1>
+		<p>
+			These programs are meant to aid in problem solving, rather than replace the concepts. Therefore, when
+			you use these programs, you are agreeing to the honor code that you will not cheat. In addition, PVCS
+			Club is NOT RESPONSIBLE if the honor code is broken.
+			Disclaimer: We are not affiliated, associated, authorized, endorsed by, or in any way officially
+			connected with Texas Instruments, or any of its subsidiaries or its affiliates. The official Texas
+			Instruments website can be found at <a target="_blank" href="https://www.ti.com">https://www.ti.com</a>.
+			The names of TI Connect and Texas Instruments as well as related names, marks, emblems and images are
+			registered trademarks of their respective owners. By using these programs, you acknowledge that this
+			tool is freely presented for use by the general public, but NO waranties or guarantees are provided
+			about the correctness, accuracy, or stability of the tool, or about its fitness for any purpose. Data
+			may be lost without warning.
+		</p>
+	</section>
+
+	<img src="../static/Images/page-wave-1.svg" alt="Page Wave Down" class="page-wave-down">
 
 {% endblock %}
