--- a/src/static/base.css
+++ b/src/static/base.css
@@ -23,8 +23,8 @@ body {
 }
 
 .navbar > a:first-child {
-  margin-right: auto;
-  margin-left: 1rem;
+    margin-right: auto;
+    margin-left: 1rem;
 }
 
 .navbar h3 {
@@ -54,46 +54,47 @@ body {
 }
 
 .dropbtn {
-  background-color: #1E202D;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  font-family: Catamaran;
-  border: none;
-  cursor: pointer;
+    background-color: #1E202D;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    font-family: Catamaran;
+    border: none;
+    cursor: pointer;
 }
 
 .dropdown {
-  position: relative;
-  display: inline-block;
+    position: relative;
+    display: inline-block;
 }
 
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  border-radius: 1rem;
+    display: none;
+    position: absolute;
+    background-color: rgba(39, 41, 48, 0.7);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 0.2rem;
 }
 
 
 .dropdown-content a {
-  color: #1e202d;
-  padding: 16px 16px;
-  text-decoration: none;
-  display: block;
-  border-radius: 1rem;
+    color: white;
+    padding: 16px 16px;
+    text-decoration: none;
+    display: block;
+    border-radius: 0.2rem;
 }
 
 .dropdown-content a:hover {
-  /* background-color: #00eb74; */
-  background: linear-gradient(to right, #00ea75, #00d9ff)
+    /* background-color: #00eb74; */
+    background: linear-gradient(to right, #00ea75, #00d9ff);
+    color: #1E202D;
   }
 
 .dropdown:hover .dropdown-content {
-  display: block;
+    display: block;
 }
 
 .footer {
@@ -152,11 +153,11 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: #1E202D;
-    height: 33rem;
+    height: 40rem;
     display: none;
     width: 100%;
     font-size: 1.5rem;
-    margin-top: -34rem;
+    margin-top: -43rem;
     /* transition: margin-top 0.5s ease; */
 }
 
