--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -57,9 +57,11 @@
             <a href={{ url_for("projects") }}>Projects</a>
             <a href={{ url_for("resources") }}>Coding Resources</a>
             <a href={{ url_for("opportunities") }}>Opportunities</a>
-            <a href={{ url_for("about") }}>About</a>
-            <a href={{url_for("legal") }}>Legal</a>
             <a href={{ url_for("join") }}>Join Club</a>
+            <a href={{ url_for("physics") }}>Physics Programs</a>
+            <a href={{ url_for("geometry") }}>Geometry Programs</a>
+            <a href={{ url_for("converters") }}>Converter Programs</a>
+            <a href={{ url_for("about") }}>About</a>
             <a href={{ url_for("legal") }}>Terms and Conditions</a>
         </div>
         <div class="footer-icons">
