--- a/src/templates/projects.html
+++ b/src/templates/projects.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set active_page = "projects" %}
 
 {% block content %}
     <section class="projects-section">
@@ -10,17 +11,17 @@
             <div class="card-grid">
                 <a href="#">
                     <div class="card">
-                        <h3>No projects yet 😔</h3>
+                        <h3>No projects yet</h3>
                     </div>
                 </a>
                 <a href="#">
                     <div class="card">
-                        <h3>Help us make some 😃</h3>
+                        <h3>Help us make some</h3>
                     </div>
                 </a>
                 <a href="#">
                     <div class="card">
-                        <h3>Or suggest ideas 😎</h3>
+                        <h3>Or suggest ideas</h3>
                     </div>
                 </a>
             </div>
