--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% set active_page = "about" %}
+
 {% block content %}
     <section class="about-section">
         <div class="content-wrapper">
