--- a/src/templates/opportunities.html
+++ b/src/templates/opportunities.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set active_page = "opportunities" %}
 
 {% block content %}
     <section class="opportunities-section">
