--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,6 +10,10 @@
     <!-- CONTAINS NAV AND FOOTER STYLING -->
     <link rel="stylesheet" href="../static/base.css">
     <link rel="stylesheet" href={{ '../static/{}'.format(stylesheet) }}>
+    <link rel="apple-touch-icon" sizes="180x180" href="../static/Images/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../static/Images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="../static/Images/favicon/favicon-16x16.png">
+<link rel="manifest" href="..static/site.webmanifest">
   </head>
 
   <body>
