--- a/src/static/base.css
+++ b/src/static/base.css
@@ -7,7 +7,7 @@
     margin: 0;
 }
 
-.active {
+.active-page {
     border-bottom: 3px solid #00eb74;
 }
 
@@ -24,6 +24,7 @@ body {
     padding-right: 1rem;
     background-color: #1E202D;
     z-index: 3;
+    padding-bottom: 1rem;
 }
 
 .navbar > a:first-child {
@@ -171,7 +172,8 @@ body {
 
 .active {
     margin-top: 0;
-    transition: margin-top 0.5s ease;
+    transition: all 0.5s ease;
+    height: 36rem;
 }
 
 .hamburger-dropdown a {
