--- a/src/static/about.css
+++ b/src/static/about.css
@@ -42,13 +42,13 @@
     }
     .content-wrapper h1 {
         width: 90vw;
-        font-size: clamp(2.5rem, 7.5vw, 100rem);
+        font-size: max(2.5rem, min(7.5vw, 100rem));
     }
     .content-wrapper h3 {
         display: none;
     }
     .content-wrapper p {
         width: 70vw;
-        font-size: clamp(1rem, 3vw, 100rem);
+        font-size: max(1rem, min(3vw, 100rem));
     }
 }
