--- a/src/static/physics.css
+++ b/src/static/physics.css
@@ -182,7 +182,7 @@ iframe {
     }
     .content-wrapper h1 {
         width: 90vw;
-        font-size: clamp(2.5rem, 7.5vw, 100rem);
+        font-size: max(2.5rem, min(7.5vw, 100rem));
     }
     .card h3 {
         font-size: 3vw;
