give links discernible names and make links to cross-origin destinations safe

--- a/src/templates/TIphysics.html
+++ b/src/templates/TIphysics.html
@@ -89,8 +89,8 @@
 		<h1>There are 3 ways to use the program:</h1>
 		<h3>Using the TI Connect CE Software</h3>
 		<p>Download the Software at 
-			<a target="_blank" href="https://education.ti.com/en/products/computer-software/ti-connect-ce-sw">TI Connect CE Software.</a>
-			Locate a <a target="_blank" href="https://education.ti.com/en/products/accessories/connectivity-kit">TI link cable</a>
+			<a rel="noreferrer" target="_blank" href="https://education.ti.com/en/products/computer-software/ti-connect-ce-sw">TI Connect CE Software.</a>
+			Locate a <a rel="noreferrer" target="_blank" href="https://education.ti.com/en/products/accessories/connectivity-kit">TI link cable</a>
 			or standard USB Mini Type A to USB Type Mini B. Then follow the step by step instructions after
 			unzipping the file. 
 		</p>
@@ -103,15 +103,15 @@
 		</iframe>
 		<h3>Using the TI Connect Software</h3>
 		<p>Download the Software at 
-			<a target="_blank" href="https://education.ti.com/en/products/computer-software/ti-connect-sw"> TI Connect Software.
-			</a> Obtain a <a target="_blank" href="https://education.ti.com/en/products/accessories/connectivity-kit">TI link cable</a>
+			<a rel="noreferrer" target="_blank" href="https://education.ti.com/en/products/computer-software/ti-connect-sw"> TI Connect Software.
+			</a> Obtain a <a rel="noreferrer" target="_blank" href="https://education.ti.com/en/products/accessories/connectivity-kit">TI link cable</a>
 			or standard USB Mini Type A to USB Type Mini B. Then follow the step by step instructions after
 			unzipping the file. For <a target="_blank" href="../static/tizip/TIConnectMAC-SendFiles.pdf" download="../static/tizip/TIConnectMAC-SendFiles.pdf">Macintosh</a> or 
 			<a target="_blank" href="../static/tizip/TIConnectPC-SendFiles.pdf" download="../static/tizip/TIConnectPC-SendFiles.pdf">PC</a>
 		</p>
 		<h3>Manually Programming Your Calculator</h3>
 		<p>You can manually program the files with basic key knowledge found 
-			<a target="_blank" href="../static/tizip/TIProgrammingGuide.pdf" download="..static/tizip/TIProgrammingGuide.pdf">here.</a> You will still need to download the TI Connect or Connect CE Software to view the files.
+			<a target="_blank" href="../static/tizip/TIProgrammingGuide.pdf" download="..static/tizip/TIProgrammingGuide.pdf">in this guide.</a> You will still need to download the TI Connect or Connect CE Software to view the files.
 		</p>
 	</section>
 
@@ -125,7 +125,7 @@
 			Club is NOT RESPONSIBLE if the honor code is broken.
 			Disclaimer: We are not affiliated, associated, authorized, endorsed by, or in any way officially
 			connected with Texas Instruments, or any of its subsidiaries or its affiliates. The official Texas
-			Instruments website can be found at <a target="_blank" href="https://www.ti.com">https://www.ti.com</a>.
+			Instruments website can be found at <a rel="noreferrer" target="_blank" href="https://www.ti.com">https://www.ti.com</a>.
 			The names of TI Connect and Texas Instruments as well as related names, marks, emblems and images are
 			registered trademarks of their respective owners. By using these programs, you acknowledge that this
 			tool is freely presented for use by the general public, but NO waranties or guarantees are provided
