--- a/src/templates/join.html
+++ b/src/templates/join.html
@@ -7,11 +7,11 @@
             <div class="card-grid">
                 <div class="card">
                     <img src="../static/Images/discord.svg" alt="Discord Icon" class="icon">
-                    <a target="_blank" href="https://discord.gg/7eZP2YPBsD"><button class="discord-button">Discord</button></a>
+                    <a target="_blank" rel="noreferrer" href="https://discord.gg/7eZP2YPBsD"><button class="discord-button">Discord</button></a>
                 </div>
                 <div class="card">
                     <img src="../static/Images/skype.svg" alt="Skype Icon" class="icon">
-                    <a target="_blank" href="https://join.skype.com/sNtbedIYrOIP"><button class="skype-button">Skype</button></a>
+                    <a target="_blank" rel="noreferrer" href="https://join.skype.com/sNtbedIYrOIP"><button class="skype-button">Skype</button></a>
                 </div>
             </div>
         </div>
