--- a/src/templates/resources.html
+++ b/src/templates/resources.html
@@ -9,7 +9,7 @@
             </h1>
     
             <div class="card-grid">
-                <a target="_blank" href="https://www.codewars.com">
+                <a rel="noreferrer" target="_blank" href="https://www.codewars.com">
                     <div class="card">
                         <img class="card-image" src="https://i.pinimg.com/600x315/3a/9d/c3/3a9dc37f10e6f213e2af5d49efee5774.jpg" alt="Codewars">
                         <h3 class="card-header">Codewars</h3>
@@ -17,7 +17,7 @@
                         <p class="card-desc">Really good beginner to advanced problems for almost any programming language. Shows top rated solutions after you solve a problem or give up</p>
                     </div>
                 </a>
-                <a target="_blank" href="https://marksheet.io">
+                <a rel="noreferrer" target="_blank" href="https://marksheet.io">
                     <div class="card">
                         <img class="card-image" src="https://marksheet.io/images/marksheet-banner.png" alt="Marksheet">
                         <h3 class="card-header">Marksheet</h3>
@@ -25,7 +25,7 @@
                         <p class="card-desc">Free HTML and CSS course for complete beginners</p>
                     </div>
                 </a>
-                <a target="_blank" href="https://www.edx.org/cs50">
+                <a rel="noreferrer" target="_blank" href="https://www.edx.org/cs50">
                     <div class="card">
                         <img class="card-image" src="https://i.ytimg.com/vi/pejxLkT-wek/maxresdefault.jpg" alt="CS50">
                         <h3 class="card-header">CS50</h3>
@@ -33,7 +33,7 @@
                         <p class="card-desc">Courses about web development, mobile development, game development, artificial intelligence, and more. Created by Harvard and completely free</p>
                     </div>
                 </a>
-                <a target="_blank" href="https://www.youtube.com/channel/UCS0N5baNlQWJCUrhCEo8WlA">
+                <a rel="noreferrer" target="_blank" href="https://www.youtube.com/channel/UCS0N5baNlQWJCUrhCEo8WlA">
                     <div class="card">
                         <img class="card-image" src="https://i.ytimg.com/vi/LnzuMJLZRdU/hqdefault.jpg?sqp=-oaymwEjCPYBEIoBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLAlRQGbNzVi9eVvAMj4xGDZDmB7CA" alt="Ben Eater Video">
                         <h3 class="card-header">Ben Eater</h3>
