--- a/src/templates/join.html
+++ b/src/templates/join.html
@@ -13,6 +13,11 @@
                     <img src="../static/Images/skype.svg" alt="Skype Icon" class="icon">
                     <a target="_blank" rel="noreferrer" href="https://join.skype.com/sNtbedIYrOIP"><button class="skype-button">Skype</button></a>
                 </div>
+                <div class="card">
+                    <img src="../static/Images/googleform.png" alt="Google Form Icon" class="icon">
+                    <a target="_blank" rel="noreferrer" href="https://forms.gle/NwFUfWVdmB6z7Nnq5"><button class="google-form-button">Registration</button></a>
+                    <p>Source: Google</p>
+                </div>
             </div>
         </div>
     </section>
