--- a/src/templates/TIgeometry.html
+++ b/src/templates/TIgeometry.html
@@ -28,7 +28,7 @@
 							known points. </p>
 					</div>
 				</a>
-				<a target="_blank" href="../static/tizip/QDRACTIC.zip" download="QDRATIC.zip">
+				<a target="_blank" href="../static/tizip/QDRATIC.zip" download="QDRATIC.zip">
 					<div class="card">
 						<h3 class="card-header">Quadractic Formula for Finding the Zeroes of a Quadractic Binomial</h3>
 						<p>QDRACTIC</p>
