Changed projects html

--- a/src/templates/projects.html
+++ b/src/templates/projects.html
@@ -9,12 +9,14 @@
             </h1>
 
             <div class="card-grid">
-                <a href="#">
+                <a rel="noreferrer" target="_blank" href="https://github.com/ReethamG/Wordle-Solver">
                     <div class="card">
-                        <h3>No projects yet</h3>
+                        <img class="card-image" src="https://images.dailyhive.com/20220107133109/Wordle.jpg" alt="Codewars">
+                        <h3 class="card-header">Wordle Bot</h3>
+                        <p>What It Does: Solves the Daily Wordle</p>
                     </div>
                 </a>
-                <a href="#">
+                <!-- <a href="#">
                     <div class="card">
                         <h3>Help us make some</h3>
                     </div>
@@ -23,7 +25,7 @@
                     <div class="card">
                         <h3>Or suggest ideas</h3>
                     </div>
-                </a>
+                </a> -->
             </div>
         </div>
     </section>
