Update Form Img

--- a/src/templates/join.html
+++ b/src/templates/join.html
@@ -10,7 +10,7 @@
                     <a target="_blank" rel="noreferrer" href="https://discord.gg/7eZP2YPBsD"><button class="discord-button">Discord</button></a>
                 </div>
                 <div class="card">
-                    <img src="https://commons.wikimedia.org/wiki/File:Google_Forms_logo_%282014-2020%29.svg" alt="Form Icon" class="icon">
+                    <img src="https://en.m.wikipedia.org/wiki/File:Google_Forms_2020_Logo.svg" alt="Form Icon" class="icon">
                     <a target="_blank" rel="noreferrer" href="https://docs.google.com/forms/d/e/1FAIpQLSdu1Q00zfjBQ-ThORh15eThHM-KZmacxzoM5bpIz6lziT3tvg/viewform?usp=sf_link"><button class="form-button">Registration</button></a>
                 </div>
             </div>
